force-app/main/default/objects/Scheduled_Visit__c/Scheduled_Visit__c.object-meta.xml
<CustomObject>
    <description>Represents a scheduled home visit by a nurse to a client</description>
    <label>Scheduled Visit</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Scheduled Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Visits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>