force-app/main/default/objects/Scheduled_Visit__c/fields/Action_Centre__c.field-meta.xml
<CustomField>
    <fullName>Action_Centre__c</fullName>
    <type>Lookup</type>
    <label>Action Centre</label>
    <description>The action centre associated with this visit</description>
    <referenceTo>Action_Centre__c</referenceTo>
    <relationshipLabel>Scheduled Visits</relationshipLabel>
    <relationshipName>Scheduled_Visits</relationshipName>
</CustomField>