force-app/main/default/objects/Scheduled_Visit__c/fields/House_Address__c.field-meta.xml
<CustomField>
    <fullName>House_Address__c</fullName>
    <type>TextArea</type>
    <label>House Address</label>
    <description>The client's home address where the visit will take place</description>
</CustomField>