force-app/main/default/objects/Scheduled_Visit__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <type>Lookup</type>
    <label>Lead</label>
    <description>The prospective client (Lead) for this visit</description>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Scheduled Visits</relationshipLabel>
    <relationshipName>Scheduled_Visits</relationshipName>
</CustomField>