force-app/main/default/objects/Scheduled_Visit__c/fields/Nurse__c.field-meta.xml
<CustomField>
    <fullName>Nurse__c</fullName>
    <type>Lookup</type>
    <label>Nurse</label>
    <description>The nurse assigned to this visit (Person Account)</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheduled Visits (Nurse)</relationshipLabel>
    <relationshipName>Scheduled_Visits_Nurse</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>