force-app/main/default/objects/Scheduled_Visit__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total price of all procedures performed during the visit</description>
    <label>Total Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>