force-app/main/default/objects/Scheduled_Visit__c/fields/Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date_Time__c</fullName>
    <description>The scheduled date and time of the visit</description>
    <label>Visit Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>