force-app/main/default/objects/Scheduled_Visit__c/listViews/All_Scheduled_Visits.listView-meta.xml
<ListView>
    <fullName>All_Scheduled_Visits</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Scheduled Visits</label>
</ListView>